--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "fuzzycal",
   "displayName": "FuzzyCal",
   "description": "一个快速弹框计算器：计算数字表达式，进制互转（bin/oct/dec/hex），支持从选中内容预填。",
-  "version": "0.1.1",
+  "version": "1.0.0",
   "publisher": "juzidaxia",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/juzidaxia/fuzzycal"
+  },
   "engines": {
     "vscode": "^1.80.0"
   },
