1.  匹配“0"前导数值为16进制 2. 去除纯”0-7“匹配8进制规则

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "fuzzycal",
   "displayName": "FuzzyCal",
   "description": "一个快速弹框计算器：计算数字表达式，进制互转（bin/oct/dec/hex），支持从选中内容预填。",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "juzidaxia",
   "repository": {
     "type": "git",
-    "url": "https://github.com/juzidaxia/fuzzycal"
+    "url": "https://github.com/EWYan/FuzzyCal"
   },
   "engines": {
     "vscode": "^1.80.0"
